--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,19 @@ services:
     #command: bash -c "cd /usr/src/app/ && ./entrypoint.sh && gunicorn app.wsgi:application -b 0.0.0.0:8000"
     command: bash -c "cd /usr/src/app/ && ./entrypoint.sh && cd app/ && python manage.py runserver 0.0.0.0:8000"
     
+  fastapi:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8001:8001
+    entrypoint:
+      - /usr/src/app/entrypoint.celery.sh
+    depends_on:
+      - redis
+      - db
+    command: bash -c "cd /usr/src/app/fastapi/ && uvicorn main:app --host 0.0.0.0 --port 8001"
+    
   db:
     image: postgres:15
     environment:
