--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ djangorestframework==3.14.0
 gunicorn==21.2.0
 psycopg2-binary==2.9.6
 python-dotenv==1.0.0
+pytest==7.4.3
+pytest-django==4.7.0
 redis==4.3.4
 requests==2.31.0
